@@ -663,14 +663,15 @@
 	  <property name="spacing">12</property>
 
 	  <child>
-	    <widget class="GtkButton" id="button_help">
+	    <widget class="GtkButton" id="button_settings">
+	      <property name="visible">True</property>
 	      <property name="can_default">True</property>
 	      <property name="can_focus">True</property>
-	      <property name="label">gtk-help</property>
-	      <property name="use_stock">True</property>
+	      <property name="label">Settings…</property>
+	      <property name="use_underline">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
-	      <signal name="clicked" handler="on_button_help_clicked" last_modification_time="Thu, 24 Mar 2005 17:16:46 GMT"/>
+	      <signal name="clicked" handler="on_button_settings_clicked" last_modification_time="Mon, 02 Mar 2009 15:24:43 GMT"/>
 	    </widget>
 	    <packing>
 	      <property name="padding">0</property>
