@@ -2,6 +2,13 @@ update-manager (1:0.98.3) UNRELEASED; urgency=low
 
   * DistUpgrade/DistUpgradeCache.py:
     - fix modalias path in NvidiaDetector
+  * data/glade/UpdateManager.glade:
+    - add "settings" button
+  * UpdateManager/UpdateManager.py:
+    - open software-properties when settings button
+      is clicked (LP: #334959)
+  * debian/control:
+    - recommend software-properties-gtk
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 02 Mar 2009 11:41:32 +0100
 
